--- a/tests/dbaas-postgres/postgres-cluster-test.yml
+++ b/tests/dbaas-postgres/postgres-cluster-test.yml
@@ -79,7 +79,7 @@
       cores: 1
       ram: 2048
       storage_size: 20480
-      storage_type: HDD
+      storage_type: SSD Premium
       location: de/fra
       connections:
         - cidr: 192.168.1.106/24
